--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Turismo",
+  "name": "turismo",
   "version": "1.0.0",
   "description": "Turismo responsive website built using HTML5, CSS3, and JavaScript. The complete layout of the page is built using grid layout and flexbox with some cool animations.",
   "main": "index.html",
@@ -14,13 +14,7 @@
   "license": "ISC",
   "engines": {
     "node": "20.x"
-<<<<<<< HEAD
   },
-=======
-  }
-}
-
->>>>>>> efaa5b595199e51a7e1d116f4c27765e1c0f9dda
   "devDependencies": {
     "autoprefixer": "^10.2.5",
     "node-sass": "^5.0.0",
